--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ plotly = "^5.24.1"
 nbformat = "^5.10.4"
 jupyter = "^1.1.1"
 scikit-learn = "^1.5.2"
+phik = "^0.12.4"
+sweetviz = "^2.3.1"
+ace-tools = "^0.0"
 
 
 [build-system]
