--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = ""
 authors = ["Anastasia <nkaliman00@mail.ru>"]
 readme = "README.md"
+package-mode = false
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -22,6 +24,10 @@ llvmlite = "*"
 shap = "^0.41.0"
 graphviz = "^0.20.3"
 supertree = "^0.5.4"
+rpds-py = "0.22.3"
+category-encoders = "^2.6.4"
+lightgbm = "^4.5.0"
+lime = "^0.2.0.1"
 
 
 [build-system]
